objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>APTS_Group__c</fullName>
        <description>Created as part of CRM-12999.Renamed the label from Group to Bundle as per the business request</description>
        <label>Bundle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bundle A</fullName>
                </value>
                <value>
                    <fullName>Bundle B</fullName>
                </value>
                <value>
                    <fullName>Bundle C</fullName>
                </value>
                <value>
                    <fullName>Bundle D</fullName>
                </value>
                <value>
                    <fullName>Bundle E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_is_Primary_in_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Primary in Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Copies_Passwords__c</fullName>
        <label>Active Copies/Passwords</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Status__c</fullName>
        <label>Renewal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Uplift</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Price__c</fullName>
        <description>Created as part of SFD-415</description>
        <label>Annual Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Base_Price__c</fullName>
        <label>Annualized Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_To_Contact_ID__c</fullName>
        <formula>Bill_To_Contact__r.SAP_Contact_ID__c</formula>
        <label>Bill-To-Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill-To Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancel_Comments__c</fullName>
        <label>Cancel Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>AR/Disputed</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Budget Cut</fullName>
                </value>
                <value>
                    <fullName>Champion / primary user left organization</fullName>
                </value>
                <value>
                    <fullName>Change of Research Focus</fullName>
                </value>
                <value>
                    <fullName>Chose another Partner</fullName>
                </value>
                <value>
                    <fullName>Client do not recognize the sale</fullName>
                </value>
                <value>
                    <fullName>Company/Site Shut down</fullName>
                </value>
                <value>
                    <fullName>Company Closure</fullName>
                </value>
                <value>
                    <fullName>Competitor Replacement</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Currency Fluctuation</fullName>
                </value>
                <value>
                    <fullName>Customer Not Proceeding</fullName>
                </value>
                <value>
                    <fullName>Customer Service Issue</fullName>
                </value>
                <value>
                    <fullName>Dissatisfaction (Product / Company / Support)</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t need / Don&apos;t use</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
                <value>
                    <fullName>Duplicated Entry</fullName>
                </value>
                <value>
                    <fullName>Functionality</fullName>
                </value>
                <value>
                    <fullName>Insufficient Amount of CAF Credits</fullName>
                </value>
                <value>
                    <fullName>Lack of Evolution of the Solution</fullName>
                </value>
                <value>
                    <fullName>Lack of Specific Tools to Offer</fullName>
                </value>
                <value>
                    <fullName>Loss of Strategic Customer</fullName>
                </value>
                <value>
                    <fullName>Merger/Acquisition</fullName>
                </value>
                <value>
                    <fullName>Non Payment/Collections Issue</fullName>
                </value>
                <value>
                    <fullName>Operational Issues (Billing / Collections)</fullName>
                </value>
                <value>
                    <fullName>Organization change / restructure</fullName>
                </value>
                <value>
                    <fullName>Poor/Low Usage</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Actual_Projected__c</fullName>
        <formula>IF(ISPICKVAL(Activity_Type__c , &quot;New&quot;), 0, TotalPrice - Projected_Renewal_Price__c )</formula>
        <inlineHelpText>Actual Renewal Price vs Projected Renewal Price</inlineHelpText>
        <label>Renewal Change (Actual - Projected)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Change_Net_New__c</fullName>
        <formula>Change_Actual_Projected__c + Net_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change + Net New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Decimal_Places_for_Currency__c</fullName>
        <label>Decimal Places for Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entitlement_Oneshot__c</fullName>
        <formula>PricebookEntry.Product2.Entitlement_Oneshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entitlement Oneshot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <description>Field used for GLI to sum Sales Tota Price and Service Total Price</description>
        <formula>TotalPrice +  LCRM_Service_Total_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incremental_Amount__c</fullName>
        <label>Incremental Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_GLI__c</fullName>
        <formula>Opportunity.Is_GLI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is GLI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRM_Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCRM_Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LCRM_Action__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Billing System Cancellation</fullName>
                </value>
                <value>
                    <fullName>Budget Cut</fullName>
                </value>
                <value>
                    <fullName>Cancelled to Upgrade</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t need / Don&apos;t use</fullName>
                </value>
                <value>
                    <fullName>Duplicated Product</fullName>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>Not Defined</fullName>
                </value>
                <value>
                    <fullName>Not Enough Work in Practice Area</fullName>
                </value>
                <value>
                    <fullName>Operational Issues (Billing / Collections)</fullName>
                </value>
                <value>
                    <fullName>Organization change / restructure</fullName>
                </value>
                <value>
                    <fullName>Paid Trial</fullName>
                </value>
                <value>
                    <fullName>Practice/Department Shut</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Processing Error</fullName>
                </value>
                <value>
                    <fullName>Product Discontinued</fullName>
                </value>
                <value>
                    <fullName>Product Performance</fullName>
                </value>
                <value>
                    <fullName>Relevant Lawyer Left</fullName>
                </value>
                <value>
                    <fullName>Transfer to Other TR Product</fullName>
                </value>
                <value>
                    <fullName>Transfer to Print</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCRM_Current_ACV__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_Current_Subscription_ACV__c</fullName>
        <description>Field used for the GLI Project to capture the customer&apos;s Current Subscription ACV</description>
        <label>Current Subscription ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_Incremental_Amount__c</fullName>
        <formula>LCRM_New_ACV_SalesPrice__c -  LCRM_Current_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gain/Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_Legacy_Source_ID__c</fullName>
        <label>Legacy Source ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_List_Net_of_Promotional_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>List Net of Promotional Amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_Net_After_Proportional_Disc_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Net After Proportional Disc Amt</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_New_ACV_SalesPrice__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New ACV/SalesPrice</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_Previous_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>OpportunityProduct_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCRM_Product_Category__c</fullName>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Product_Family_Test__c</fullName>
        <formula>if(ispickval(PricebookEntry.Product2.Family, &quot;Service&quot;),&quot;Service&quot;,if(ispickval(PricebookEntry.Product2.Family, &quot;Product&quot;), &quot;Product&quot;, 
if(ispickval(PricebookEntry.Product2.Family, &quot;Maintenance&quot;), &quot;Maintenance&quot;,&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LCRM Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Product_Level_2__c</fullName>
        <formula>PricebookEntry.Product2.Product_Level_2__c</formula>
        <label>Product Level 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Product_Level_4__c</fullName>
        <description>Field used for GLI to pull in Product info on the Opportunity Product object</description>
        <formula>PricebookEntry.Product2.Product_Level_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Level 4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Product_Segment__c</fullName>
        <label>Product Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Corp. Gov</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>TK Audit</fullName>
                </value>
                <value>
                    <fullName>Westlaw Edge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCRM_Product_Set__c</fullName>
        <formula>PricebookEntry.Product2.LCRM_Product_Set__c</formula>
        <label>Product Set</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Product_Type__c</fullName>
        <formula>PricebookEntry.Product2.LCRM_Product_Type__c</formula>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Service_Total_Price__c</fullName>
        <description>GLI field used to enter the Service Price</description>
        <label>Service Total Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_Source_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCRM_Split_On__c</fullName>
        <formula>Opportunity.LCRM_Split_On__c</formula>
        <label>Split On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRM_USL_Incremental__c</fullName>
        <description>CRM-17856: field which shows difference between New ACV and Current ACV where &quot;Action&quot; not equal to &quot;Renew&quot;. IF we are adding any Renewal product then this field should 0 .</description>
        <formula>IF( ISPICKVAL(LCRM_Action__c, &quot;Renew&quot; ) || ISPICKVAL(LCRM_Action__c, &quot;Remove&quot;), 0 , LCRM_New_ACV_SalesPrice__c -  LCRM_Current_ACV__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>USL Incremental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_Units__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This Numeric fields used to represent No. of User/Volume of Product</inlineHelpText>
        <label>Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LCRM_of_Users__c</fullName>
        <description>Field used for GLI project to capture the number of users</description>
        <label># of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lapsed_Date__c</fullName>
        <label>Lapsed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Invoice_Price__c</fullName>
        <label>Last Sub Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MOLI_id__c</fullName>
        <label>MOLI_id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Number__c</fullName>
        <label>Material Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Charge_Calc__c</fullName>
        <formula>IF(ISPICKVAL(PricebookEntry.Product2.Subscribable_Indicator__c,&quot;Subscribable&quot;) &amp;&amp; (ISPICKVAL( Opportunity.Sales_Org__c ,&quot;LLEY&quot;) || ISPICKVAL( Opportunity.Sales_Org__c ,&quot;ABEP&quot;) || ISPICKVAL( Opportunity.Sales_Org__c ,&quot;BEJE&quot;) || ISPICKVAL( Opportunity.Sales_Org__c ,&quot;LLPA&quot;) || ISPICKVAL( Opportunity.Sales_Org__c ,&quot;LLUR&quot;)), 
Floor(
(Total_Price_Calculation__c / Opportunity.Subscription_Term__c)* (10^  Decimal_Places_for_Currency__c  )
)/(10^Decimal_Places_for_Currency__c) ,
0)</formula>
        <label>Monthly Charge Calc</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Charge_Suggested_Price__c</fullName>
        <description>The Suggested Total Price be displayed in a popup to the user if there is a Monthly Charge Variance.</description>
        <formula>Floor(
(Total_Price_Calculation__c / Opportunity.Subscription_Term__c)* (10^  Decimal_Places_for_Currency__c  )
)/(10^Decimal_Places_for_Currency__c) * Opportunity.Subscription_Term__c</formula>
        <label>MC Suggested Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Charge_Suggested_Total_Price_Msg__c</fullName>
        <formula>IF(
AND(
ISPICKVAL(PricebookEntry.Product2.Subscribable_Indicator__c,&quot;Subscribable&quot;),
(OR(ISPICKVAL( $User.Sales_Org__c ,&quot;LLEY&quot;),
ISPICKVAL( $User.Sales_Org__c ,&quot;LLPA&quot;),
ISPICKVAL( $User.Sales_Org__c ,&quot;LLUR&quot;),
ISPICKVAL( $User.Sales_Org__c ,&quot;ABEP&quot;),
ISPICKVAL( $User.Sales_Org__c ,&quot;BEJE&quot;))),
Monthly_Charge_Variance_Amount__c != 0),
TEXT(Monthly_Charge_Suggested_Price__c),&quot;&quot;)</formula>
        <label>Suggested Total Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Charge_Variance_Amount__c</fullName>
        <description>Value used to determine if a different suggested price is required to be given to the user to accommodate Monthly Charge rounding.</description>
        <formula>IF(
ISPICKVAL(PricebookEntry.Product2.Subscribable_Indicator__c,&quot;Subscribable&quot;) 
,(Floor(Total_Price_Calculation__c* (10^ Decimal_Places_for_Currency__c ))/(10^Decimal_Places_for_Currency__c))-(Monthly_Charge_Calc__c * Opportunity.Subscription_Term__c)
,0)</formula>
        <label>MC Variance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Charge__c</fullName>
        <label>Monthly Charge</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_New__c</fullName>
        <formula>IF(ISPICKVAL(Activity_Type__c , &quot;New&quot;), TotalPrice, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Contacts__c</fullName>
        <label>Number of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage_Increase__c</fullName>
        <formula>IF(TotalPrice = 0,0,IF(Annualized_Base_Price__c = 0,0,((TotalPrice/ Annualized_Base_Price__c ) - 1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Price Increase %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Previous_Subscription_Number__c</fullName>
        <label>Previous Subscription Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Year_s_SFDC_Quote_No__c</fullName>
        <description>As a part of SFD-944</description>
        <label>Previous Year&apos;s SFDC Quote No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Material_Desc__c</fullName>
        <description>The package identifier from SAP, identifying which products have been sold together as a bundle.</description>
        <label>Primary Material Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Active__c</fullName>
        <formula>PricebookEntry.Product2.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Category_Detail__c</fullName>
        <label>Product Category Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>33 Act</fullName>
                </value>
                <value>
                    <fullName>34 Act</fullName>
                </value>
                <value>
                    <fullName>Add-On</fullName>
                </value>
                <value>
                    <fullName>APP</fullName>
                </value>
                <value>
                    <fullName>Blog Services</fullName>
                </value>
                <value>
                    <fullName>BoardLink</fullName>
                </value>
                <value>
                    <fullName>Brief Tools</fullName>
                </value>
                <value>
                    <fullName>Business Citator</fullName>
                </value>
                <value>
                    <fullName>Campus</fullName>
                </value>
                <value>
                    <fullName>Case Logistix</fullName>
                </value>
                <value>
                    <fullName>CD-ROM/DVD</fullName>
                </value>
                <value>
                    <fullName>Cite Advisor</fullName>
                </value>
                <value>
                    <fullName>CLEAR</fullName>
                </value>
                <value>
                    <fullName>CNB/TimeLine</fullName>
                </value>
                <value>
                    <fullName>Correctional Facilities</fullName>
                </value>
                <value>
                    <fullName>Cowels</fullName>
                </value>
                <value>
                    <fullName>DealProof</fullName>
                </value>
                <value>
                    <fullName>Docket Calendar</fullName>
                </value>
                <value>
                    <fullName>DocketWatch</fullName>
                </value>
                <value>
                    <fullName>Drafting Assistant</fullName>
                </value>
                <value>
                    <fullName>DRR</fullName>
                </value>
                <value>
                    <fullName>EDGARfilings</fullName>
                </value>
                <value>
                    <fullName>EDGAR Filing Service</fullName>
                </value>
                <value>
                    <fullName>EDGARforms</fullName>
                </value>
                <value>
                    <fullName>EDGARizer</fullName>
                </value>
                <value>
                    <fullName>EDGARizerX</fullName>
                </value>
                <value>
                    <fullName>Enterprise KM</fullName>
                </value>
                <value>
                    <fullName>Exposure Pack</fullName>
                </value>
                <value>
                    <fullName>FedPubs In-house</fullName>
                </value>
                <value>
                    <fullName>FedPubs IS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Austrailia</fullName>
                </value>
                <value>
                    <fullName>Book</fullName>
                </value>
                <value>
                    <fullName>CD/DVD</fullName>
                </value>
                <value>
                    <fullName>Dockets</fullName>
                </value>
                <value>
                    <fullName>FindLaw</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Hubbard</fullName>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>Online (Non-Westlaw)</fullName>
                </value>
                <value>
                    <fullName>Professional Development</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>TREWS</fullName>
                </value>
                <value>
                    <fullName>WestKM</fullName>
                </value>
                <value>
                    <fullName>Westlaw</fullName>
                </value>
                <value>
                    <fullName>Westlaw IE</fullName>
                </value>
                <value>
                    <fullName>Westlaw Intl</fullName>
                </value>
                <value>
                    <fullName>WestlawNext</fullName>
                </value>
                <value>
                    <fullName>Westlaw UAE</fullName>
                </value>
                <value>
                    <fullName>Westlaw UK Scots Law</fullName>
                </value>
                <value>
                    <fullName>WLB</fullName>
                </value>
                <value>
                    <fullName>XM Law</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>